Minor video info button alignment fix

--- a/app/assets/stylesheets/main_components/videos/video_show/_video-info.scss
+++ b/app/assets/stylesheets/main_components/videos/video_show/_video-info.scss
@@ -68,11 +68,11 @@
     }
     
     .edit-video-button {
-      margin-right: (4 / 16 * 1rem);
       background-color: $form-action-color;
     }
     
     .subscribe-button {
+      margin-left: (4 / 16 * 1rem);
       background-color: red;
     }
   }
